--- a/config/templates/base.html
+++ b/config/templates/base.html
@@ -11,6 +11,6 @@
 <div class="container-fluid">
     <div class="jumbotron">
         <h1>Emenu</h1>
-        <p>Zarządzaj swoimi menu</p>
+        <p>Zarządzaj swoim menu</p>
     </div>
 </div>
